# rust-serverless-functions

./: Cargo.toml  vercel.json
api/: [slug].rs
